<resources>
    <string name="app_name">Cadastro</string>
    <string name="name">Nome Completo:</string>
    <string name="phone">Telefone:</string>
    <string name="email">E-mail:</string>
    <string name="list">Ingressar na lista de e-mails?</string>
    <string name="sex">Sexo:</string>
    <string name="sex_m">Masculino</string>
    <string name="sex_f">Feminino</string>
    <string name="city">Cidade:</string>
    <string name="state">UF:    </string>
    <string name="clear">Limpar</string>
    <string name="save">Salvar</string>

    <string-array name="states">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte </item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

</resources>