<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/phone"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <CheckBox
                android:id="@+id/ckbList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp"
                android:textStyle="bold"></CheckBox>

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rdbMasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/sex_m"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rdbFem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/sex_f"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/city"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnStates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/states"
                android:textSize="24sp"
                android:textStyle="bold"
                android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>